# AIAssignment2

./: Chords.py  GeneticAlgorithm.py  MIDIHandler.py  NoteTimeStamped.py  Notes.py  Scales.py  TimeSignature.py  Track.py  main.py  pyproject.toml
midi/: barbiegirl_edited.mid  faded.mid  output.mid  sun.mid  untitled.mid
