[tool.poetry]
name = "aiassignment 2"
version = "0.1.0"
description = ""
authors = ["Yakov Dementyev <y.dementyev@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.2.10"
descartes = "^1.1.0"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
